--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,33 +1,29 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "private": true,
   "proxy": "http://127.0.0.1:5000",
+  "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^2.1.1",
-    "@chakra-ui/react": "^2.8.2",
-    "@cloudinary/react": "^1.13.0",
-    "@cloudinary/url-gen": "^1.19.0",
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.7.2",
-    "cloudinary": "^2.2.0",
-    "cloudinary-react": "^1.8.1",
-    "framer-motion": "^11.2.13",
-    "i": "^0.3.7",
-    "npm": "^10.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-lottie": "^1.2.4",
+    "@chakra-ui/icons": "^1.0.13",
+    "@chakra-ui/react": "^1.6.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
+    "chat-app": "file:..",
+    "framer-motion": "^4",
+    "react": "^17.0.2",
+    "react-chips": "^0.8.0",
+    "react-dom": "^17.0.2",
+    "react-lottie": "^1.2.3",
     "react-notification-badge": "^1.5.1",
-    "react-router-dom": "^5.3.4",
-    "react-scripts": "5.0.1",
-    "react-scrollable-feed": "^2.0.2",
-    "socket.io-client": "^4.7.5",
-    "web-vitals": "^2.1.4"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-scrollable-feed": "^1.3.1",
+    "socket.io-client": "^4.1.2",
+    "web-vitals": "^1.0.1"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -52,10 +48,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.39",
-    "tailwindcss": "^3.4.6"
   }
 }
